--- a/404.html
+++ b/404.html
@@ -2,6 +2,5 @@
 layout: 404-layout
 title: 404
 ---
-<h1>Oh bugger!</h1>
-<h2>It looks like you've gone astray. Never fear, you can wait for a few seconds to be automatically redirected</h2>
-<p>Or (for the impatient) click the little house to the top right or my name to the left. =D</p>
+<h1>Oh non!</h1>
+<p>Le contenu que vous recherchez n'est pas diponible ou pas ici. =D</p>
