--- a/404.html
+++ b/404.html
@@ -1,6 +1,9 @@
 ---
-layout: 404-layout
-title: 404
+layout: default
+title: "404: Page not found"
 ---
-<h1>Oh non!</h1>
-<p>Le contenu que vous recherchez n'est pas diponible ou pas ici. =D</p>
+
+<div class="page">
+  <h1 class="page-title">404: Page not found</h1>
+  <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="/">Head back home</a> to try finding it again.</p>
+</div>
