--- a/404.html
+++ b/404.html
@@ -1,9 +1,6 @@
 ---
-layout: default
-title: "404: Page not found"
+layout: 404-layout
+title: 404
 ---
-
-<div class="page">
-  <h1 class="page-title">404: Page not found</h1>
-  <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="/">Head back home</a> to try finding it again.</p>
-</div>
+<h1>Oh non!</h1>
+<p>Le contenu que vous recherchez n'est pas diponible ou pas ici. =D</p>
