--- a/proto/index.html
+++ b/proto/index.html
@@ -28,7 +28,7 @@
 		<div class="input protoHTML">
 			<div class="inner left">
 <pre class="prettyprint"><code>&lt;!--
-HTML example:
+Exemple HTML:
 &lt;div class="block header"&gt;header&lt;/div&gt;
 --&gt;</code></pre>
 				<textarea id="inputHTML"></textarea>
@@ -38,7 +38,7 @@ HTML example:
 		<div class="input protoCSS">
 			<div class="inner right">
 <pre class="prettyprint"><code>/*
-CSS example:
+Exemple CSS:
 .header {padding: 20px;}
 */</code></pre>
 			<textarea id="inputCSS"></textarea>
@@ -47,7 +47,7 @@ CSS example:
 	</section>
 
 	<div class="island disclaimer">
-		<p>Testez maintenant sans wamp et recharement intensif de la page !</p>
+		<p>Testez maintenant sans wamp et rechargement intensif de la page !</p>
 	</div>
 
 	<div class="island tweetThis">
