--- a/proto/index.html
+++ b/proto/index.html
@@ -63,7 +63,7 @@ Exemple CSS:
 <script>
 (function() {
 	var	contents = $('iframe').contents(),
-		head = contents.find('head').html("<link rel='stylesheet' href='/proto/scss/proto-compiled.css'>"),
+		head = contents.find('head'),
 		body = contents.find('body'),
 		styleTag = $('<style></style>').appendTo(head);
 
