--- a/proto/index.html
+++ b/proto/index.html
@@ -21,7 +21,7 @@
 	</section>
 
 	<div class="reference">
-		<p>C'est très simple, il y a pas encore le javascript mais c'est déjà ça.</p>
+		<p>C'est très simple pour créer des sites CSS, il y a pas encore le javascript mais c'est déjà ça.</p>
 	</div>
 
 	<section class="protoBuilder">
@@ -46,16 +46,12 @@ Exemple CSS:
 		</div>
 	</section>
 
-	<div class="island disclaimer">
-		<p>Testez maintenant sans wamp et rechargement intensif de la page !</p>
-	</div>
-
 	<div class="island tweetThis">
 		<a data-tip="&hearts;" class="bttn tweet" href="http://twitter.com/share?url=http://cedced19.github.io/proto&text=Prototype by @cedced19 :"><img src="birdy.png" width="50" height="50" /></a>
 	</div>
 
 	<div class="island footer">
-		<p>Crée par <a href="https://cedced19.github.io/cedced19">Cedced19</a>.</p>
+		<p>Créer par <a href="https://cedced19.github.io/cedced19">Cedced19</a>.</p>
 	</div>
 
 </body>
