--- a/proto/index.html
+++ b/proto/index.html
@@ -50,7 +50,7 @@ Exemple CSS:
 		<a data-tip="&hearts;" class="bttn tweet" href="http://twitter.com/share?url=http://cedced19.github.io/proto&text=Prototype by @cedced19 :"><img src="birdy.png" width="50" height="50" /></a>
 	</div>
 	<div class="island footer">
-		<p>Créer par <a href="https://cedced19.github.io/cedced19">Cedced19</a>.</p>
+		<p>Créer par <a href="https://cedced19.github.io">Cedced19</a>.</p>
 	</div>
 
 </body>
