--- a/calculs/index.html
+++ b/calculs/index.html
@@ -10,6 +10,7 @@
     	<script src="bootstrap/js/jquery.js"></script>
 		<script src="bootstrap/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/calculatrice.js"></script>
+		<script type="text/javascript" src="js/analytics.js"></script>
 		<link rel="stylesheet" media="screen, print, handheld" type="text/css" href="css/calculatrice.css" />
 		<link rel="stylesheet"  href="css/style.css" />
 	</head>
