--- a/latin/5/index.html
+++ b/latin/5/index.html
@@ -9,29 +9,29 @@
 <title>5&egrave;me D&eacute;clinaison</title>
 <script>
 
-/* script réalisé par Maxime Bochon,& scénario de Jean-Louis Pinon le 31.03.2001, */
+/* script realise par Maxime Bochon,& scenario de Jean-Louis Pinon le 31.03.2001, */
 
-var nbrQuestions = 22 ; //indique ici le nombre de questions posées par essai (il y a deux essais)
-var ptsNecessaires = 18 ; //indique ici le nombre de points nécessaires pour passer au niveau suivant
+var nbrQuestions = 22 ; //indique ici le nombre de questions posees par essai (il y a deux essais)
+var ptsNecessaires = 18 ; //indique ici le nombre de points necessaires pour passer au niveau suivant
 var essai = 0 ; //ne pas toucher à ça !
 var score = 0 ;
 var reponsesBonnes = 0 ;
 var reponsesMauvaises = 0 ;
 var nbrBonus = 0 ;
 var bonusReponsesBonnes = 0 ;
-var bonusDelai = 12 ; //délai du bonus en secondes
+var bonusDelai = 12 ; //delai du bonus en secondes
 var bonusTimeout = false ;
 var message = '' ;
 var n = 0 ;
 var delai = 0 ;
 var tempsRestant = 0 ;
-messageBon = new Array() ; //tu peux ajouter des messages de félicitation
+messageBon = new Array() ; //tu peux ajouter des messages de felicitation
 messageBon[0] = 'Bravo !' ;
-messageBon[1] = 'Bien joué !' ;
+messageBon[1] = 'Bien joue !' ;
 messageBon[2] = 'Très fort !' ;
 messageFaux = new Array() ; //et la aussi
 messageFaux[0] = 'Dommage !' ;
-messageFaux[1] = 'Mauvaise réponse !' ;
+messageFaux[1] = 'Mauvaise reponse !' ;
 messageFaux[2] = 'Et non !' ;
 
 function commencer(){
@@ -79,65 +79,65 @@ function objetQuestion(verbe,forme,solution,pointVrai,pointFaux){
 }
 
 function faireQuestions(){
-questions = new Array() ; //le nombre de questions n'est absolument pas limité
+questions = new Array() ; //le nombre de questions n'est absolument pas limite
 	questions[0] = new objetQuestion('res, rei (f) = la chose','Nominatif SINGULIER','res',1,.5) ;
 	questions[1] = new objetQuestion('res, rei (f) = la chose','Vocatif SINGULIER','res',1,.5) ;
 	questions[2] = new objetQuestion('res, rei (f) = la chose','Accusatif SINGULIER','rem',1,.5) ;
-	questions[3] = new objetQuestion('res, rei (f) = la chose','Génitif SINGULIER','rei',1,.5) ;
+	questions[3] = new objetQuestion('res, rei (f) = la chose','Genitif SINGULIER','rei',1,.5) ;
 	questions[4] = new objetQuestion('res, rei (f) = la chose','Datif SINGULIER','rei',1,.5) ;
 	questions[5] = new objetQuestion('res, rei (f) = la chose','Ablatif SINGULIER','re',1,.5) ;
 	questions[6] = new objetQuestion('res, rei (f) = la chose','Nominatif PLURIEL','res',1,.5) ;
 	questions[7] = new objetQuestion('res, rei (f) = la chose','Vocatif PLURIEL','res',1,.5) ;
 	questions[8] = new objetQuestion('res, rei (f) = la chose','Accusatif PLURIEL','res',1,.5) ;
-	questions[9] = new objetQuestion('res, rei (f) = la chose','Génitif PLURIEL','rerum',1,.5) ;
+	questions[9] = new objetQuestion('res, rei (f) = la chose','Genitif PLURIEL','rerum',1,.5) ;
 	questions[10] = new objetQuestion('res, rei (f) = la chose','Datif PLURIEL','rebus',1,.5) ;
 	questions[11] = new objetQuestion('res, rei (f) = la chose','Ablatif PLURIEL','rebus',1,.5) ;
 	questions[12] = new objetQuestion('facies, ei (f) = le visage','Nominatif SINGULIER','facies',1,.5) ;
 	questions[13] = new objetQuestion('facies, ei (f) = le visage','Vocatif SINGULIER','facies',1,.5) ;
 	questions[14] = new objetQuestion('facies, ei (f) = le visage','Accusatif SINGULIER','faciem',1,.5) ;
-	questions[15] = new objetQuestion('facies, ei (f) = le visage','Génitif SINGULIER','faciei',1,.5) ;
+	questions[15] = new objetQuestion('facies, ei (f) = le visage','Genitif SINGULIER','faciei',1,.5) ;
 	questions[16] = new objetQuestion('facies, ei (f) = le visage','Datif SINGULIER','faciei',1,.5) ;
 	questions[17] = new objetQuestion('facies, ei (f) = le visage','Ablatif SINGULIER','facie',1,.5) ;
 	questions[18] = new objetQuestion('facies, ei (f) = le visage','Nominatif PLURIEL','facies',1,.5) ;
 	questions[19] = new objetQuestion('facies, ei (f) = le visage','Vocatif PLURIEL','facies',1,.5) ;
 	questions[20] = new objetQuestion('facies, ei (f) = le visage','Accusatif PLURIEL','facies',1,.5) ;
-	questions[21] = new objetQuestion('facies, ei (f) = le visage','Génitif PLURIEL','facierum',1,.5) ;
+	questions[21] = new objetQuestion('facies, ei (f) = le visage','Genitif PLURIEL','facierum',1,.5) ;
 	questions[22] = new objetQuestion('facies, ei (f) = le visage','Datif PLURIEL','faciebus',1,.5) ;
 	questions[23] = new objetQuestion('facies, ei (f) = le visage','Ablatif PLURIEL','faciebus',1,.5) ;
 	questions[24] = new objetQuestion('dies, ei (m) = le jour','Nominatif SINGULIER','dies',1,.5) ;
 	questions[25] = new objetQuestion('dies, ei (m) = le jour','Vocatif SINGULIER','dies',1,.5) ;
 	questions[26] = new objetQuestion('dies, ei (m) = le jour','Accusatif SINGULIER','diem',1,.5) ;
-	questions[27] = new objetQuestion('dies, ei (m) = le jour','Génitif SINGULIER','diei',1,.5) ;
+	questions[27] = new objetQuestion('dies, ei (m) = le jour','Genitif SINGULIER','diei',1,.5) ;
 	questions[28] = new objetQuestion('dies, ei (m) = le jour','Datif SINGULIER','diei',1,.5) ;
 	questions[29] = new objetQuestion('dies, ei (m) = le jour','Ablatif SINGULIER','die',1,.5) ;
 	questions[30] = new objetQuestion('dies, ei (m) = le jour','Nominatif PLURIEL','dies',1,.5) ;
 	questions[31] = new objetQuestion('dies, ei (m) = le jour','Vocatif PLURIEL','dies',1,.5) ;
 	questions[32] = new objetQuestion('dies, ei (m) = le jour','Accusatif PLURIEL','dies',1,.5) ;
-	questions[33] = new objetQuestion('dies, ei (m) = le jour','Génitif PLURIEL','dierum',1,.5) ;
+	questions[33] = new objetQuestion('dies, ei (m) = le jour','Genitif PLURIEL','dierum',1,.5) ;
 	questions[34] = new objetQuestion('dies, ei (m) = le jour','Datif PLURIEL','diebus',1,.5) ;
 	questions[35] = new objetQuestion('dies, ei (m) = le jour','Ablatif PLURIEL','diebus',1,.5) ;
 	questions[36] = new objetQuestion('spes, ei (f) = l\'espoir','Nominatif SINGULIER','spes',1,.5) ;
 	questions[37] = new objetQuestion('spes, ei (f) = l\'espoir','Vocatif SINGULIER','spes',1,.5) ;
 	questions[38] = new objetQuestion('spes, ei (f) = l\'espoir','Accusatif SINGULIER','spem',1,.5) ;
-	questions[39] = new objetQuestion('spes, ei (f) = l\'espoir','Génitif SINGULIER','spei',1,.5) ;
+	questions[39] = new objetQuestion('spes, ei (f) = l\'espoir','Genitif SINGULIER','spei',1,.5) ;
 	questions[40] = new objetQuestion('spes, ei (f) = l\'espoir','Datif SINGULIER','spei',1,.5) ;
 	questions[41] = new objetQuestion('spes, ei (f) = l\'espoir','Ablatif SINGULIER','spe',1,.5) ;
 	questions[42] = new objetQuestion('spes, ei (f) = l\'espoir','Nominatif PLURIEL','spes',1,.5) ;
 	questions[43] = new objetQuestion('spes, ei (f) = l\'espoir','Vocatif PLURIEL','spes',1,.5) ;
 	questions[44] = new objetQuestion('spes, ei (f) = l\'espoir','Accusatif PLURIEL','spes',1,.5) ;
-	questions[45] = new objetQuestion('spes, ei (f) = l\'espoir','Génitif PLURIEL','sperum',1,.5) ;
+	questions[45] = new objetQuestion('spes, ei (f) = l\'espoir','Genitif PLURIEL','sperum',1,.5) ;
 	questions[46] = new objetQuestion('spes, ei (f) = l\'espoir','Datif PLURIEL','spebus',1,.5) ;
 	questions[47] = new objetQuestion('spes, ei (f) = l\'espoir','Ablatif PLURIEL','spebus',1,.5) ;
 	questions[48] = new objetQuestion('fides, ei (f) = la confiance','Nominatif SINGULIER','fides',1,.5) ;
 	questions[49] = new objetQuestion('fides, ei (f) = la confiance','Vocatif SINGULIER','fides',1,.5) ;
 	questions[50] = new objetQuestion('fides, ei (f) = la confiance','Accusatif SINGULIER','fidem',1,.5) ;
-	questions[51] = new objetQuestion('fides, ei (f) = la confiance','Génitif SINGULIER','fidei',1,.5) ;
+	questions[51] = new objetQuestion('fides, ei (f) = la confiance','Genitif SINGULIER','fidei',1,.5) ;
 	questions[52] = new objetQuestion('fides, ei (f) = la confiance','Datif SINGULIER','fidei',1,.5) ;
 	questions[53] = new objetQuestion('fides, ei (f) = la confiance','Ablatif SINGULIER','fide',1,.5) ;
 	questions[54] = new objetQuestion('fides, ei (f) = la confiance','Nominatif PLURIEL','fides',1,.5) ;
 	questions[55] = new objetQuestion('fides, ei (f) = la confiance','Vocatif PLURIEL','fides',1,.5) ;
 	questions[56] = new objetQuestion('fides, ei (f) = la confiance','Accusatif PLURIEL','fides',1,.5) ;
-	questions[57] = new objetQuestion('fides, ei (f) = la confiance','Génitif PLURIEL','fiderum',1,.5) ;
+	questions[57] = new objetQuestion('fides, ei (f) = la confiance','Genitif PLURIEL','fiderum',1,.5) ;
 	questions[58] = new objetQuestion('fides, ei (f) = la confiance','Datif PLURIEL','fidebus',1,.5) ;
 	questions[59] = new objetQuestion('fides, ei (f) = la confiance','Ablatif PLURIEL','fidebus',1,.5) ;
 }
@@ -164,7 +164,7 @@ function repondre(){
 		}
 	}
 	else{
-		message = (tempsRestant > 0)?messageFaux[Math.floor(Math.random()*messageFaux.length)]:'Il faut être plus rapide !' ;		message += '\n\nLa solution ' + ((tempsRestant > 0)?('n\'était pas "'+reponseTxt+'" mais '):'était ') ;
+		message = (tempsRestant > 0)?messageFaux[Math.floor(Math.random()*messageFaux.length)]:'Il faut être plus rapide !' ;		message += '\n\nLa solution ' + ((tempsRestant > 0)?('n\'etait pas "'+reponseTxt+'" mais '):'etait ') ;
 for(i=0;i<solutionTxt.length;i++){
 			message += ((i != 0)?' ou ':'')+solutionTxt[i] ;
 		}
@@ -258,9 +258,9 @@ function bilan(){
 	var contenu = '' ;
 	contenu += '<span style="font-size:20px">score actuel : <span class="blanc">' + Math.ceil(score) + '</span></span><br>' ;
 	contenu += '<hr align="center" width="20" color="white" size="1">' ;
-	contenu += 'bonnes rép. : <span class="blanc">' + reponsesBonnes + '</span><br>' ;
-	contenu += 'mauvaises rép. : <span class="blanc">' + reponsesMauvaises + '</span><br>' ;
-	contenu += 'bonus gagnés : <span class="blanc">' + nbrBonus + '</span><br>' ;
+	contenu += 'bonnes rep. : <span class="blanc">' + reponsesBonnes + '</span><br>' ;
+	contenu += 'mauvaises rep. : <span class="blanc">' + reponsesMauvaises + '</span><br>' ;
+	contenu += 'bonus gagnes : <span class="blanc">' + nbrBonus + '</span><br>' ;
 	contenu += '<hr align="center" width="20" color="white" size="1">' ;
 	contenu += '<span style="font-size:20px">temps restant : <span class="blanc">' + Math.floor(tempsRestant) + '</span></span>' ;
 	document.all.bilan.innerHTML = contenu ;
@@ -278,7 +278,7 @@ function niveauSuivant(){
 	}
 	else{
 		if(essai == 1){
-			autreEssai = confirm('Vous n\'avez pas suffisamment de points pour revenir au sommaire.\n\nSouhaitez-vous réessayer ?') ;
+			autreEssai = confirm('Vous n\'avez pas suffisamment de points pour revenir au sommaire.\n\nSouhaitez-vous reessayer ?') ;
 			if(autreEssai) reessayer() ;
 		}
 		else{
@@ -385,7 +385,7 @@ color: rgb(83,169,255);
   <div id="commencer" style="display:block;">
     <div align="center"> 
             <div align="center"><span class="blanc"><font size="1">Choisissez 
-              en cliquant dessus un temps pour répondre (en secondes) :</font></span> 
+              en cliquant dessus un temps pour repondre (en secondes) :</font></span> 
               <font size="2"><span class="main btn btn-danger" id="tmps10" onClick="temps(10);">10</span> 
                <span class="main btn btn-warning" id="tmps15" onClick="temps(15);">15</span> 
                <span class="main btn btn-info" id="tmps20" onClick="temps(20);">20</span> 
