--- a/latin/4/index.html
+++ b/latin/4/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+<meta charset="utf-8"> 
 <link href="../bootstrap.css" rel="stylesheet">
 <link href="../s.css" rel="stylesheet">
 <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" /> 
@@ -352,7 +353,7 @@ function bonus(){
 <div class="rollbox">
 	<h2>A propos...</h2>
 	<div>
-		Je pense que la version 2001 de Gratum Studium est un peu veille alors j’en est crée une nouvelle.
+		Je pense que la version 2001 de Gratum Studium est un peu veille alors j’en est cree une nouvelle.
 		Allez voir le projet d'origine Gratum Studium. 
 	</div>
 	<a href="http://cedced19.github.io/latin/">Menu principal</a>
