--- a/demo/countdown-page/index.html
+++ b/demo/countdown-page/index.html
@@ -5,27 +5,7 @@
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<style>
-	
-* { margin:0; padding:0; }
-#center { 
-	height:100%; 
-	width:100%;
-/*	float: left;*/
-	background-image:url('background.png'); 
-	background-position: center;
-	font-family: "Candara", serif; 
-	color:#fff;
-	text-align:center;
-	display:table;
-	font-size:50px;
-	padding:15px;
-}
-div { text-align:center; }
-
-
-.cache{ background-color:#000; position:absolute; cursor:pointer; width:100%; }
-</style>
+<link href="s.css" rel="stylesheet"> 
 <script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript" src="countdown.js"></script>
 <script type="text/javascript">
