--- a/latin/4/index.html
+++ b/latin/4/index.html
@@ -353,7 +353,10 @@ function bonus(){
 <div class="rollbox">
 	<h2>A propos...</h2>
 	<div>
-		Je pense que la version 2001 de Gratum Studium est un peu veille alors j’en est cree une nouvelle.
+		Objectif : decliner le plus rapidement un mot !
+	</div>
+	<div>
+		Je pense que la version 2001 de Gratum Studium est un peu veille alors il y en a une nouvelle.
 		Allez voir le projet d'origine Gratum Studium. 
 	</div>
 	<a href="http://cedced19.github.io/latin/">Menu principal</a>
