--- a/latin/5/index.html
+++ b/latin/5/index.html
@@ -346,6 +346,14 @@ function bonus(){
 
 </form>
 
+<footer>
+	<div class="island social">
+		<a data-tip="&hearts;" class="bttnt tweet" href="http://twitter.com/share?url=http://cedced19.github.io/latin/5/&text=Latin by @cedced19 :"><img src="../birdy.png" width="50" height="50" /></a>
+		<a data-tip="&hearts;" class="bttng google" href="https://plus.google.com/share?url=http%3A%2F%2Fcedced19.github.io%2Flatin%2F5%2F&hl=fr"><img src="../google.png" width="50" height="50" /></a>
+	</div>
+</footer>
+
+
 <div class="modal" id="aide">
   <div class="modal-dialog">
     <div class="modal-content">
