--- a/latin/1/index.html
+++ b/latin/1/index.html
@@ -13,6 +13,22 @@
 <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
+<meta name="twitter:cars" content="summary" />
+<meta name="twitter:title" content="http://cedced19.github.io/latin/1/" />
+<meta name="twitter:image" content="http://cedced19.github.io/profile.png" />
+<meta name="twitter:site" content="@cedced19" />
+<meta name="twitter:author" content="@cedced19" />
+<meta name="twitter:description" content="Un site pour apprendre le latin !" />
+
+<meta property="og:type" content="website" />
+<meta property="og:title" content="1&egrave;re D&eacute;clinaison" />
+<meta property="og:image" content="http://cedced19.github.io/profile.png" />
+<meta property="og:language" content="fr_FR">
+<meta property="og:url" content="http://cedced19.github.io/latin/1/" />
+<meta property="og:description" content="Un site pour apprendre le latin !" />
+        
+<link href="https://plus.google.com/104855167193751168501/" rel="publisher" />
+<meta name="description" content="Un site pour apprendre le latin !" />
 <script>
 
 var nbrQuestions = 22 ; //indique ici le nombre de questions posees par essai (il y a deux essais)
