--- a/demo/birthday-page/index.html
+++ b/demo/birthday-page/index.html
@@ -7,9 +7,26 @@
 		<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet"  href="style.css" />
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-    	<link rel="icon" type="image/x-icon" href="favicon.ico" />
-    	<script src="bootstrap/js/jquery.js"></script>
+    		<link rel="icon" type="image/x-icon" href="favicon.ico" />
+    		<script src="bootstrap/js/jquery.js"></script>
 		<script src="bootstrap/js/bootstrap.min.js"></script>
+		
+		<meta name="twitter:cars" content="summary" />
+		<meta name="twitter:title" content="Happy Birthday" />
+		<meta name="twitter:image" content="http://cedced19.github.io/profile.png" />
+		<meta name="twitter:site" content="@cedced19" />
+		<meta name="twitter:author" content="@cedced19" />
+		<meta name="twitter:description" content="Un site pour les anniversaires" />
+		
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Happy Birthday" />
+		<meta property="og:image" content="http://cedced19.github.io/profile.png" />
+		<meta property="og:language" content="fr_FR">
+		<meta property="og:url" content="http://cedced19.github.io/demo/birthday-page/" />
+		<meta property="og:description" content="Un site pour les anniversaires" />
+		        
+		<link href="https://plus.google.com/104855167193751168501/" rel="publisher" />
+		<meta name="description" content="Un site pour les anniversaires" />
 	</head>
 	<body>
 		<div id="block" class="shadow">
