--- a/demo/download-page/index.html
+++ b/demo/download-page/index.html
@@ -6,7 +6,23 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 		<meta name='apple-mobile-web-app-capable' content='yes'>
-        <meta name='apple-touch-fullscreen' content='yes'>
+		<meta name='apple-touch-fullscreen' content='yes'>
+		<meta name="twitter:cars" content="summary" />
+		<meta name="twitter:title" content="Download Page" />
+		<meta name="twitter:image" content="http://cedced19.github.io/profile.png" />
+		<meta name="twitter:site" content="@cedced19" />
+		<meta name="twitter:author" content="@cedced19" />
+		<meta name="twitter:description" content="Un site pour télécharger un fichier" />
+		
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Download Page" />
+		<meta property="og:image" content="http://cedced19.github.io/profile.png" />
+		<meta property="og:language" content="fr_FR">
+		<meta property="og:url" content="http://cedced19.github.io/demo/download-page/" />
+		<meta property="og:description" content="Un site pour télécharger un fichier" />
+		        
+		<link href="https://plus.google.com/104855167193751168501/" rel="publisher" />
+		<meta name="description" content="Un site pour télécharger un fichier" />
 
 		<title>Cedced19 | Download Page</title>
 
@@ -16,7 +32,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
 		<link href="css/style.css" rel="stylesheet">
 		<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
-        <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
+        	<link rel="icon" type="image/x-icon" href="img/favicon.ico" />
 		
 		<!-- Javascripts -->
 		<script src="js/jquery-1.9.1.min.js"></script>
