--- a/latin/1/index.html
+++ b/latin/1/index.html
@@ -14,7 +14,7 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 <meta name="twitter:cars" content="summary" />
-<meta name="twitter:title" content="http://cedced19.github.io/latin/1/" />
+<meta name="twitter:title" content="1&egrave;re D&eacute;clinaison" />
 <meta name="twitter:image" content="http://cedced19.github.io/profile.png" />
 <meta name="twitter:site" content="@cedced19" />
 <meta name="twitter:author" content="@cedced19" />
@@ -32,7 +32,7 @@
 <script>
 
 var nbrQuestions = 22 ; //indique ici le nombre de questions posees par essai (il y a deux essais)
-var essai = 0 ; //ne pas toucher à ça !
+var essai = 0 ; //ne pas toucher ï¿½ ï¿½a !
 var score = 0 ;
 var reponsesBonnes = 0 ;
 var reponsesMauvaises = 0 ;
@@ -183,7 +183,7 @@ function repondre(){
 		}
 	}
 	else{
-		message = (tempsRestant > 0)?messageFaux[Math.floor(Math.random()*messageFaux.length)]:'Il faut être plus rapide !' ;		message += '\n\nLa solution ' + ((tempsRestant > 0)?('n\'etait pas "'+reponseTxt+'" mais '):'etait ') ;
+		message = (tempsRestant > 0)?messageFaux[Math.floor(Math.random()*messageFaux.length)]:'Il faut ï¿½tre plus rapide !' ;		message += '\n\nLa solution ' + ((tempsRestant > 0)?('n\'etait pas "'+reponseTxt+'" mais '):'etait ') ;
 for(i=0;i<solutionTxt.length;i++){
 			message += ((i != 0)?' ou ':'')+solutionTxt[i] ;
 		}
