--- a/demo/html5-page/index.html
+++ b/demo/html5-page/index.html
@@ -2,17 +2,34 @@
 <html>
   
   <head>
-    <meta charset="utf-8">
-    <title>HTML ?</title>
-    <link href="styles/main.css" rel="stylesheet" type="text/css">
-    <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend
-    that you do not modify it.-->
-    <script>
-      var __adobewebfontsappname__="dreamweaver"
-    </script>
-    <script src="http://use.edgefonts.net/bad-script:n4:default.js" type="text/javascript"></script>
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
-    <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
+		<meta charset="utf-8">
+		<title>HTML ?</title>
+		<link href="styles/main.css" rel="stylesheet" type="text/css">
+		<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend
+		that you do not modify it.-->
+		<script>
+		var __adobewebfontsappname__="dreamweaver"
+		</script>
+		<script src="http://use.edgefonts.net/bad-script:n4:default.js" type="text/javascript"></script>
+		<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
+		<link rel="icon" type="image/x-icon" href="img/favicon.ico" />
+		
+		<meta name="twitter:cars" content="summary" />
+		<meta name="twitter:title" content="HTML ?" />
+		<meta name="twitter:image" content="http://cedced19.github.io/profile.png" />
+		<meta name="twitter:site" content="@cedced19" />
+		<meta name="twitter:author" content="@cedced19" />
+		<meta name="twitter:description" content="Un site avec un beau css." />
+		
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="HTML ?" />
+		<meta property="og:image" content="http://cedced19.github.io/profile.png" />
+		<meta property="og:language" content="fr_FR">
+		<meta property="og:url" content="http://cedced19.github.io/demo/html5-page/" />
+		<meta property="og:description" content="Un site avec un beau css." />
+		        
+		<link href="https://plus.google.com/104855167193751168501/" rel="publisher" />
+		<meta name="description" content="Un site avec un beau css." />
   </head>
   
   <body>
