--- a/demo/countdown-page/index.html
+++ b/demo/countdown-page/index.html
@@ -5,6 +5,24 @@
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+<meta name="twitter:cars" content="summary" />
+<meta name="twitter:title" content="Countdown" />
+<meta name="twitter:image" content="http://cedced19.github.io/profile.png" />
+<meta name="twitter:site" content="@cedced19" />
+<meta name="twitter:author" content="@cedced19" />
+<meta name="twitter:description" content="Un site avec un compte à rebour." />
+
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Countdown" />
+<meta property="og:image" content="http://cedced19.github.io/profile.png" />
+<meta property="og:language" content="fr_FR">
+<meta property="og:url" content="http://cedced19.github.io/demo/countdown-page/" />
+<meta property="og:description" content="Un site avec un compte à rebour." />
+        
+<link href="https://plus.google.com/104855167193751168501/" rel="publisher" />
+<meta name="description" content="Un site avec un compte à rebour." />
+
 <link href="s.css" rel="stylesheet"> 
 <script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript" src="countdown.js"></script>
