--- a/latin/all/index.html
+++ b/latin/all/index.html
@@ -14,7 +14,7 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 <meta name="twitter:cars" content="summary" />
-<meta name="twitter:title" content="http://cedced19.github.io/latin/all/" />
+<meta name="twitter:title" content="Toutes D&eacute;clinaisons" />
 <meta name="twitter:image" content="http://cedced19.github.io/profile.png" />
 <meta name="twitter:site" content="@cedced19" />
 <meta name="twitter:author" content="@cedced19" />
@@ -34,7 +34,7 @@
 
 var nbrQuestions = 22 ; //indique ici le nombre de questions posees par essai (il y a deux essais)
 var ptsNecessaires = 18 ; //indique ici le nombre de points necessaires pour passer au niveau suivant
-var essai = 0 ; //ne pas toucher à ça !
+var essai = 0 ; //ne pas toucher ï¿½ ï¿½a !
 var score = 0 ;
 var reponsesBonnes = 0 ;
 var reponsesMauvaises = 0 ;
@@ -100,318 +100,15 @@ function objetQuestion(verbe,forme,solution,pointVrai,pointFaux){
 }
 
 function faireQuestions(){
-	questions = new Array() ; //le nombre de questions n'est absolument pas limité
+	questions = new Array() ; //le nombre de questions n'est absolument pas limitï¿½
 	questions[0] = new objetQuestion('causa, ae (f) = la cause','Nominatif SINGULIER','causa',1,.5) ;
 	questions[1] = new objetQuestion('causa, ae (f) = la cause','Vocatif SINGULIER','causa',1,.5) ;
 	questions[2] = new objetQuestion('causa, ae (f) = la cause','Accusatif SINGULIER','causam',1,.5) ;
-	questions[3] = new objetQuestion('causa, ae (f) = la cause','Génitif SINGULIER','causae',1,.5) ;
+	questions[3] = new objetQuestion('causa, ae (f) = la cause','Gï¿½nitif SINGULIER','causae',1,.5) ;
 	questions[4] = new objetQuestion('causa, ae (f) = la cause','Datif SINGULIER','causae',1,.5) ;
 	questions[5] = new objetQuestion('causa, ae (f) = la cause','Ablatif SINGULIER','causa',1,.5) ;
 	questions[6] = new objetQuestion('manus, us (f) = la main','Nominatif SINGULIER','manus',1,.5) ;
 	questions[7] = new objetQuestion('manus, us (f) = la main','Vocatif SINGULIER','manus',1,.5) ;
 	questions[8] = new objetQuestion('manus, us (f) = la main','Accusatif SINGULIER','manum',1,.5) ;
-	questions[9] = new objetQuestion('manus, us (f) = la main','Génitif SINGULIER','manus',1,.5) ;
-	questions[10] = new objetQuestion('manus, us (f) = la main','Datif SINGULIER','manui',1,.5) ;
-	questions[11] = new objetQuestion('manus, us (f) = la main','Ablatif SINGULIER','manu',1,.5) ;
-	questions[12] = new objetQuestion('puer, i (m) = l\'enfant','Nominatif PLURIEL','pueri',1,.5) ;
-	questions[13] = new objetQuestion('puer, i (m) = l\'enfant','Vocatif PLURIEL','pueri',1,.5) ;
-	questions[14] = new objetQuestion('puer, i (m) = l\'enfant','Accusatif PLURIEL','pueros',1,.5) ;
-	questions[15] = new objetQuestion('puer, i (m) = l\'enfant','Génitif PLURIEL','puerorum',1,.5) ;
-	questions[16] = new objetQuestion('puer, i (m) = l\'enfant','Datif PLURIEL','pueris',1,.5) ;
-	questions[17] = new objetQuestion('puer, i (m) = l\'enfant','Ablatif PLURIEL','pueris',1,.5) ;
-	questions[18] = new objetQuestion('facies, ei (f) = le visage','Nominatif PLURIEL','facies',1,.5) ;
-	questions[19] = new objetQuestion('facies, ei (f) = le visage','Vocatif PLURIEL','facies',1,.5) ;
-	questions[20] = new objetQuestion('facies, ei (f) = le visage','Accusatif PLURIEL','facies',1,.5) ;
-	questions[21] = new objetQuestion('facies, ei (f) = le visage','Génitif PLURIEL','facierum',1,.5) ;
-	questions[22] = new objetQuestion('facies, ei (f) = le visage','Datif PLURIEL','faciebus',1,.5) ;
-	questions[23] = new objetQuestion('facies, ei (f) = le visage','Ablatif PLURIEL','faciebus',1,.5) ;
-	questions[24] = new objetQuestion('civis, is (m) = le citoyen','Nominatif SINGULIER','civis',1,.5) ;
-	questions[25] = new objetQuestion('civis, is (m) = le citoyen','Vocatif SINGULIER','civis',1,.5) ;
-	questions[26] = new objetQuestion('civis, is (m) = le citoyen','Accusatif SINGULIER','civem',1,.5) ;
-	questions[27] = new objetQuestion('civis, is (m) = le citoyen','Génitif SINGULIER','civis',1,.5) ;
-	questions[28] = new objetQuestion('civis, is (m) = le citoyen','Datif SINGULIER','civi',1,.5) ;
-	questions[29] = new objetQuestion('civis, is (m) = le citoyen','Ablatif SINGULIER','cive',1,.5) ;
-	questions[30] = new objetQuestion('dies, ei (m) = le jour','Nominatif PLURIEL','dies',1,.5) ;
-	questions[31] = new objetQuestion('dies, ei (m) = le jour','Vocatif PLURIEL','dies',1,.5) ;
-	questions[32] = new objetQuestion('dies, ei (m) = le jour','Accusatif PLURIEL','dies',1,.5) ;
-	questions[33] = new objetQuestion('dies, ei (m) = le jour','Génitif PLURIEL','dierum',1,.5) ;
-	questions[34] = new objetQuestion('dies, ei (m) = le jour','Datif PLURIEL','diebus',1,.5) ;
-	questions[35] = new objetQuestion('dies, ei (m) = le jour','Ablatif PLURIEL','diebus',1,.5) ;
-	questions[36] = new objetQuestion('bellum, i (n) = la guerre','Nominatif SINGULIER','bellum',1,.5) ;
-	questions[37] = new objetQuestion('bellum, i (n) = la guerre','Vocatif SINGULIER','bellum',1,.5) ;
-	questions[38] = new objetQuestion('bellum, i (n) = la guerre','Accusatif SINGULIER','bellum',1,.5) ;
-	questions[39] = new objetQuestion('bellum, i (n) = la guerre','Génitif SINGULIER','belli',1,.5) ;
-	questions[40] = new objetQuestion('bellum, i (n) = la guerre','Datif SINGULIER','bello',1,.5) ;
-	questions[41] = new objetQuestion('bellum, i (n) = la guerre','Ablatif SINGULIER','bello',1,.5) ;
-	questions[42] = new objetQuestion('cornu, us (n) = la corne','Nominatif SINGULIER','cornu',1,.5) ;
-	questions[43] = new objetQuestion('cornu, us (n) = la corne','Vocatif SINGULIER','cornu',1,.5) ;
-	questions[44] = new objetQuestion('cornu, us (n) = la corne','Accusatif SINGULIER','cornu',1,.5) ;
-	questions[45] = new objetQuestion('cornu, us (n) = la corne','Génitif SINGULIER','cornus',1,.5) ;
-	questions[46] = new objetQuestion('cornu, us (n) = la corne','Datif SINGULIER','cornui',1,.5) ;
-	questions[47] = new objetQuestion('cornu, us (n) = la corne','Ablatif SINGULIER','cornu',1,.5) ;
-	questions[48] = new objetQuestion('corpus, oris (n) = le corps','Nominatif PLURIEL','corpora',1,.5) ;
-	questions[49] = new objetQuestion('corpus, oris (n) = le corps','Vocatif PLURIEL','corpora',1,.5) ;
-	questions[50] = new objetQuestion('corpus, oris (n) = le corps','Accusatif PLURIEL','corpora',1,.5) ;
-	questions[51] = new objetQuestion('corpus, oris (n) = le corps','Génitif PLURIEL','corporum',1,.5) ;
-	questions[52] = new objetQuestion('corpus, oris (n) = le corps','Datif PLURIEL','corporibus',1,.5) ;
-	questions[53] = new objetQuestion('corpus, oris (n) = le corps','Ablatif PLURIEL','corporibus',1,.5) ;
-	questions[54] = new objetQuestion('ager, agri (m) = le champ','Nominatif SINGULIER','ager',1,.5) ;
-	questions[55] = new objetQuestion('ager, agri (m) = le champ','Vocatif SINGULIER','ager',1,.5) ;
-	questions[56] = new objetQuestion('ager, agri (m) = le champ','Accusatif SINGULIER','agrum',1,.5) ;
-	questions[57] = new objetQuestion('ager, agri (m) = le champ','Génitif SINGULIER','agri',1,.5) ;
-	questions[58] = new objetQuestion('ager, agri (m) = le champ','Datif SINGULIER','agro',1,.5) ;
-	questions[59] = new objetQuestion('ager, agri (m) = le champ','Ablatif SINGULIER','agro',1,.5) ;
-}
-
-function repondre(){
-	clearInterval(chronoIntervale) ;
-	var solution = questions[nombre[n]].solution ;
-	var solutionTxt = solution.split(/,/) ;
-	var reponseTxt = document.quizz.r.value ;
-	var reponse = false ;
-	for(i=0;i<solutionTxt.length;i++){
-		if(reponseTxt == solutionTxt[i]){
-			reponse = true ;
-		}
-	}
-	if(reponse){
-		message = messageBon[Math.floor(Math.random()*messageBon.length)] ;
-		score += questions[nombre[n]].pointVrai ;
-		reponsesBonnes++ ;
-		bonusReponsesBonnes++ ;
-		if(!(bonusTimeout)){
-			btmt = setTimeout('bonusTimeout=false;bonusReponsesBonnes=0;',bonusDelai*1000) ;
-			bonusTimeout = true ;
-		}
-	}
-	else{
-		message = (tempsRestant > 0)?messageFaux[Math.floor(Math.random()*messageFaux.length)]:'Il faut être plus rapide !' ;		message += '\n\nLa solution ' + ((tempsRestant > 0)?('n\'etait pas "'+reponseTxt+'" mais '):'etait ') ;
-for(i=0;i<solutionTxt.length;i++){
-			message += ((i != 0)?' ou ':'')+solutionTxt[i] ;
-		}
-		message += '.' ;
-		score -= questions[nombre[n]].pointFaux ;
-		score = (score < 0)?0:score ;
-		reponsesMauvaises++ ;
-		bonusReponsesBonnes = 0 ;
-		if(bonusTimeout){
-			clearTimeout(btmt) ;
-			bonusTimeout = false ;
-		}
-		erreurs[erreurs.length] = new objetErreur(questions[nombre[n]].verbe,questions[nombre[n]].forme,questions[nombre[n]].solution,document.quizz.r.value)
-	}
-	alert(message+'\n\nVotre score est de ' + Math.ceil(score) + ' point' + ((score>1)?'s.':'.')) ;
-	bonus() ;
-	bilan() ;
-	n++ ;
-	verbeSuivant() ;
-}
-
-function temps(combien){
-	delai = combien ;
-	document.all.tmps10.style.fontWeight = (combien == 10)?'bold':'' ;
-	document.all.tmps15.style.fontWeight = (combien == 15)?'bold':'' ;
-	document.all.tmps20.style.fontWeight = (combien == 20)?'bold':'' ;
-	document.all.tmps25.style.fontWeight = (combien == 25)?'bold':'' ;
-}
-
-function chrono(fonction) {
-	switch(fonction){
-		case 'debut' :
-			tempsRestant = delai ;
-			chronoIntervale = setInterval('chrono(\'decompte\')',250) ;
-			bilan() ;
-			break ;
-		case 'decompte' :
-			if(tempsRestant > 0){
-				tempsRestant -= .25 ;
-				bilan() ;
-			}
-			else{
-				chrono('fin') ;
-			}
-			break ;
-		case 'fin' :
-			repondre() ;
-			break ;
-	}
-}
-
-function objetErreur(verbe,forme,solution,reponseFausse){
-	this.verbe = new String(verbe) ;
-	this.forme = new String(forme) ;
-	this.solution = new String(solution) ;
-	this.reponseFausse = new String(reponseFausse) ;
-	this.essai = new String(essai) ;
-	document.quizz.boutonErreurs.disabled = false ;
-}
-
-function voirErreurs(){
-	var contenu = '' ;
-	var message = '' ;
-	var hr = false ;
-	if(document.all.mesErreurs.innerHTML.toLowerCase() == '<br><br>'){
-		contenu += '<br><br>' ;
-		for(i=0;i<erreurs.length;i++){
-			contenu += '<span class="blanc">' + erreurs[i].verbe + '</span>' ;
-			contenu += ' ==> <span class="blanc">' + erreurs[i].forme + '</span>' ;
-			contenu += ' donne <span class="blanc">' + erreurs[i].solution + '</span>' ;
-			contenu += (erreurs[i].reponseFausse != '')?(' et non <span class="blanc">' + erreurs[i].reponseFausse + '</span>.'):'.' ;
-			contenu += '<br>' ;
-			if((hr == false)&&(erreurs[i].essai == 1)){
-				contenu += '<br><hr class="blanc" noshade size="1">' ;
-				hr = true ;
-			}
-			contenu += '<br>' ;
-		}
-		contenu += '<br>' ;
-		message += 'Cacher les erreurs' ;
-	}
-	else{
-		contenu += '<br><br>' ;
-		message += 'Voir les erreurs' ;
-	}
-	document.all.mesErreurs.innerHTML = contenu ;
-	document.quizz.boutonErreurs.value = message ;
-}
-
-function bilan(){
-	var contenu = '' ;
-	contenu += '<span style="font-size:20px">score actuel : <span class="blanc">' + Math.ceil(score) + '</span></span><br>' ;
-	contenu += '<hr align="center" width="20" color="white" size="1">' ;
-	contenu += 'bonnes rep. : <span class="blanc">' + reponsesBonnes + '</span><br>' ;
-	contenu += 'mauvaises rep. : <span class="blanc">' + reponsesMauvaises + '</span><br>' ;
-	contenu += 'bonus gagnes : <span class="blanc">' + nbrBonus + '</span><br>' ;
-	contenu += '<hr align="center" width="20" color="white" size="1">' ;
-	contenu += '<span style="font-size:20px">temps restant : <span class="blanc">' + Math.floor(tempsRestant) + '</span></span>' ;
-	document.all.bilan.innerHTML = contenu ;
-	document.all.decompte.style.width = (Math.floor(tempsRestant*(70/delai))) + 'px';
-	document.all.decompte.style.visibility = ((tempsRestant<5)&&((tempsRestant*10) != parseInt(tempsRestant*10)))?'hidden':'visible' ;
-}
-
-function bilanPosition(){
-	document.all.bilan.style.top = (document.body.scrollTop+5)+'px' ;
-}
-
-
-function reessayer(){
-	score = 0 ;
-	reponsesBonnes = 0 ;
-	bonusReponsesBonnes = 0 ;
-	reponsesMauvaises = 0 ;
-	document.all.contenu.style.display = 'block' ;
-	document.all.bas.style.display = 'none' ;
-	if(document.all.mesErreurs.innerHTML.toLowerCase() != '<br><br>') document.quizz.boutonErreurs.click() ;
-	verbeSuivant() ;
-}
-
-function bonus(){
-	if(bonusReponsesBonnes == 3){
-		nbrBonus++ ;
-		bonusReponsesBonnes = 0 ;
-		clearTimeout(btmt) ;
-		bonusTimeout = false ;
-		score += 1.5 ;
-	}
-}
-
-</script>
-
-
-</head>
-
-<body onload="faireQuestions();temps(15);bilan();" onscroll="bilanPosition();">
-<div id="bilan"></div>
-<div id="haut">
-			<br>  
-        	<button align="center" data-toggle="modal" href="#aide" class="btn btn-primary">Auxilium (aide)</button>
-</div>
-<form name="quizz" action="javascript:repondre();">
-  <div align="center"> 
-    <p>&nbsp; </p>
-  </div>
-  <div id="commencer" style="display:block;">
-    <div align="center"> 
-            <div align="center"><span class="blanc"><font size="1">Choisissez 
-              en cliquant dessus un temps pour repondre (en secondes) :</font></span> 
-              <font size="2"><span class="main btn btn-danger" id="tmps10" onClick="temps(10);">10</span> 
-               <span class="main btn btn-warning" id="tmps15" onClick="temps(15);">15</span> 
-               <span class="main btn btn-info" id="tmps20" onClick="temps(20);">20</span> 
-               <span class="main btn btn-success" id="tmps25" onClick="temps(25);">25</span></font></div>
-      <div align="center"><br>
-        <input type="button" value="Incipe ! (commencer)" onclick="commencer();" class="btn btn-success">
-      </div>
-    </div>
-  </div>
-  <div id="contenu" style="display:none;" align="center"> <span class="blanc"><span id="numero"></span>&nbsp;<b><span id="verbe"></span>&nbsp;&nbsp;==>&nbsp;&nbsp;<u><span id="forme"></span></u></b></span><br>
-    <br>
-    <br>
-    <div class="input-group">
-    	<input type="text" name="r" style="width: 250px;" class="form-control">
-    	<input type="submit" value="OK" class="btn btn-success">
-    </div>
-    
-    &nbsp;&nbsp;&nbsp;<span id="barreTemps"><span id="decompte"></span></span> 
-  </div>
-  <div id="bas" style="display: none;" align="center"> 
-    <input type="button" class="bouton btn btn-success" onclick="self.location=self.location;" value="Recommencer">
-    <input type="button" class="bouton btn btn-success" onclick="voirErreurs();" value="Voir les erreurs" name="boutonErreurs">
-    <div id="mesErreurs" align="center"><br>
-      <br>
-    </div>
-    <a href="http://cedced19.github.io/latin/" class="bouton btn btn-success">Revenir au sommaire !</a>
-  </div>
-
-</form>
-
-<footer>
-	<div class="island social">
-		<a data-tip="&hearts;" class="bttnt tweet" href="http://twitter.com/share?url=http://cedced19.github.io/latin/all/&text=Latin by @cedced19 :"><img src="../birdy.png" width="50" height="50" /></a>
-		<a data-tip="&hearts;" class="bttng google" href="https://plus.google.com/share?url=http%3A%2F%2Fcedced19.github.io%2Flatin%2Fall%2F&hl=fr"><img src="../google.png" width="50" height="50" /></a>
-	</div>
-</footer>
-
-<div class="modal" id="aide">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">x</button>
-        <h4 class="modal-title" style="color:#000;">Aide</h4>
-      </div>
-      <div class="modal-body">
-        <img src="aide.png" height="1000" width="500"> 
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="rollbox">
-	<h2>A propos...</h2>
-	<div>
-		Objectif : decliner le plus rapidement un mot !
-	</div>
-	<div>
-		Je pense que la version 2001 de Gratum Studium est un peu veille alors il y en a une nouvelle.
-		Allez voir le projet d'origine Gratum Studium. 
-	</div>
-	<a href="http://cedced19.github.io/latin/">Menu principal</a>
-</div>
-<script>
-		$(document).ready(function(){
-			$('.rollbox').rollBox();
-		});
-</script>
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-49736522-1', 'cedced19.github.io');
-  ga('send', 'pageview');
-
-</script>
-</body>
-
-</html>
+	questions[9] = new objetQuestion('manus, us (f) = la main','Gï¿½nitif SINGULIER','manus',1,.5) ;
+	questions[10] = new objetQuestion('manus, us (f) = la main','Datif SINGULIER','
