--- a/proto/index.html
+++ b/proto/index.html
@@ -5,6 +5,22 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Prototype</title>
 	<link rel="shortcut icon" href="icon.png">
+	<meta name="twitter:cars" content="summary" />
+	<meta name="twitter:title" content="Prototype" />
+	<meta name="twitter:image" content="http://cedced19.github.io/profile.png" />
+	<meta name="twitter:site" content="@cedced19" />
+	<meta name="twitter:author" content="@cedced19" />
+	<meta name="twitter:description" content="Un site pour coder en html/css !" />
+	
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="Prototype" />
+	<meta property="og:image" content="http://cedced19.github.io/profile.png" />
+	<meta property="og:language" content="fr_FR">
+	<meta property="og:url" content="http://cedced19.github.io/proto/" />
+	<meta property="og:description" content="Un site pour coder en html/css !" />
+	        
+	<link href="https://plus.google.com/104855167193751168501/" rel="publisher" />
+	<meta name="description" content="Un site pour coder en html/css !" />
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="s.css">
 	<script type="text/javascript" src="//use.typekit.net/kxs7tky.js"></script>
